Fixed highlighting bug on mobiles

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,12 @@
 @import url('fonts.css');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    -webkit-tap-highlight-color: transparent;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -43,6 +50,9 @@ body {
     background-color: #e0e0e0;
 }
 
+.cell:active {
+    background-color: #d0d0d0;
+}
 .reset-button {
     padding: 10px 20px;
     margin-top: 20px;
